--- a/templates/client.html
+++ b/templates/client.html
@@ -17,8 +17,15 @@
             min="16"
             max="80"
             oninput="WebSocketTest(this)"
-            style="width: 100%; height: 200px"
         />
+        <style>
+            #MasterVolume {
+                width: 100%;
+                height: 200px;
+                background-color: blueviolet;
+                color: brown;
+            }
+        </style>
         <script type="text/javascript">
             function WebSocketTest(e) {
                 if ("WebSocket" in window) {
@@ -36,9 +43,9 @@
                     };
 
                     ws.onmessage = function (evt) {
-                        var received_msg = evt.data;
-                        let h1_volume = document.getElementById("volume");
-                        h1_volume.textContent = `Volume: ${received_msg}`;
+                        // var received_msg = evt.data;
+                        // let h1_volume = document.getElementById("volume");
+                        // h1_volume.textContent = `Volume: ${received_msg}`;
                         // console.log(`Message is received...: ${received_msg}`);
                         // let mv = document.getElementById("MasterVolume");
                         // mv.value = parseInt(received_msg);
@@ -55,6 +62,6 @@
             }
         </script>
 
-        <h1 id="volume">Volume: 40</h1>
+        <!-- <h1 id="volume">Volume: 40</h1> -->
     </body>
 </html>
